tests/must_not_compile/type_id_collision.stderr
error[E0277]: the trait bound `coproduct::Union<B, EmptyUnion>: Append<A, _>` is not satisfied
  --> tests/must_not_compile/type_id_collision.rs:17:22
   |
17 |     let _: Coproduct<C<_>> = coproduct::inject(A);
   |                      ^^^^ the trait `Append<A, _>` is not implemented for `coproduct::Union<B, EmptyUnion>`
   |
   = help: the trait `Merge<Other, coproduct::Union<Hd, Td>>` is implemented for `coproduct::Union<H, T>`
   = note: required for `coproduct::Union<A, EmptyUnion>` to implement `Merge<coproduct::Union<B, EmptyUnion>, coproduct::Union<_, EmptyUnion>>`
